add ws and profile setting
