# cmd/api/main.go
@@ -12,6 +12,7 @@ import (
 	"megan-messenger/internal/httputil"
 	"megan-messenger/internal/message"
 	"megan-messenger/internal/notification"
+	"megan-messenger/internal/ratelimit"
 	"megan-messenger/internal/user"
 	"megan-messenger/internal/ws"
 	"os"
@@ -65,10 +66,11 @@ func main() {
 		notification.NewLogSmsSender(logger),
 		cfg.Auth,
 	)
-	userService := user.NewService(userRepo, cfg.FileStore.AvatarsPath())
-	conversationService := conversation.NewService(conversationRepo)
+	userService := user.NewService(userRepo, conversationRepo, cfg.FileStore.AvatarsPath())
+	conversationService := conversation.NewService(conversationRepo, userRepo, messageRepo)
 	wsService := ws.NewService(rdb, userRepo, messageRepo, cfg.CORS.AllowedOrigins)
-	messageService := message.NewService(conversationRepo, messageRepo)
+	messageService := message.NewService(conversationRepo, messageRepo, userRepo)
+	rateLimiter := ratelimit.New(rdb)
 	validator := httputil.NewValidator()
 
 	api := application{
@@ -82,6 +84,7 @@ func main() {
 		wsService:           wsService,
 		messageService:      messageService,
 		validator:           validator,
+		rateLimiter:         rateLimiter,
 	}
 
 	if err := api.run(api.mount()); err != nil {
