# internal/db/postgres/sqlc/models.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.31.1
+//   sqlc v1.30.0
 
 package db
 
@@ -94,10 +94,12 @@ type PhoneOtpCode struct {
 }
 
 type User struct {
-	ID           uuid.UUID          `db:"id" json:"id"`
-	Phone        string             `db:"phone" json:"phone"`
-	Username     pgtype.Text        `db:"username" json:"username"`
-	PasswordHash pgtype.Text        `db:"password_hash" json:"passwordHash"`
-	AvatarUrl    pgtype.Text        `db:"avatar_url" json:"avatarUrl"`
-	CreatedAt    pgtype.Timestamptz `db:"created_at" json:"createdAt"`
+	ID                 uuid.UUID          `db:"id" json:"id"`
+	Phone              string             `db:"phone" json:"phone"`
+	Username           pgtype.Text        `db:"username" json:"username"`
+	PasswordHash       pgtype.Text        `db:"password_hash" json:"passwordHash"`
+	AvatarUrl          pgtype.Text        `db:"avatar_url" json:"avatarUrl"`
+	CreatedAt          pgtype.Timestamptz `db:"created_at" json:"createdAt"`
+	UsernameSearchable bool               `db:"username_searchable" json:"usernameSearchable"`
+	DmPolicy           string             `db:"dm_policy" json:"dmPolicy"`
 }
