# internal/message/types.go
@@ -8,3 +8,11 @@ type GetPagingResponse struct {
 	Messages   []model.Message `json:"messages"`
 	NextCursor string          `json:"nextCursor"`
 }
+
+type SendMessageRequest struct {
+	Content string `json:"content" validate:"required,min=1,max=5000"`
+}
+
+type SendMessageResponse struct {
+	Message model.Message `json:"message"`
+}
